@@ -22,13 +22,19 @@ Net::SSLeay::X509_EXTENSION class in L<SPVM> represents L<X509_EXTENSION|https:/
 
 C<method get_data : L<Net::SSLeay::ASN1_OCTET_STRING|SPVM::Net::SSLeay::ASN1_OCTET_STRING> ();>
 
-Calls native L<X509_NAME_ENTRY_get_data|https://docs.openssl.org/1.1.1/man3/X509_NAME_ENTRY_get_object> functions given the pointer value of the instance, copies the return value of the native function, creates a new L<Net::SSLeay::ASN1_OCTET_STRING|SPVM::Net::SSLeay::ASN1_OCTET_STRING> object, sets the pointer value of the new object to the copied value, and returns the new object.
+Calls native L<X509_EXTENSION_get_data|https://docs.openssl.org/1.1.1/man3/X509_EXTENSION_get_object> functions given the pointer value of the instance, copies the return value of the native function, creates a new L<Net::SSLeay::ASN1_OCTET_STRING|SPVM::Net::SSLeay::ASN1_OCTET_STRING> object, sets the pointer value of the new object to the copied value, and returns the new object.
 
 =head2 get_object
 
 C<method get_object : L<Net::SSLeay::ASN1_OBJECT|SPVM::Net::SSLeay::ASN1_OBJECT> ();>
 
-Calls native L<X509_NAME_ENTRY_get_object|https://docs.openssl.org/1.1.1/man3/X509_NAME_ENTRY_get_object> functions given the pointer value of the instance, creates a new L<Net::SSLeay::ASN1_OBJECT|SPVM::Net::SSLeay::ASN1_OBJECT>, sets the pointer value of the new object to the return value of the native function sets C<no_free> flag to 1, and returns the new object.
+Calls native L<X509_EXTENSION_get_object|https://docs.openssl.org/1.1.1/man3/X509_EXTENSION_get_object> functions given the pointer value of the instance, creates a new L<Net::SSLeay::ASN1_OBJECT|SPVM::Net::SSLeay::ASN1_OBJECT>, sets the pointer value of the new object to the return value of the native function sets C<no_free> flag to 1, and returns the new object.
+
+=head2 get_critical
+
+C<method get_critical : int ();>
+
+Calls native L<X509_EXTENSION_get_critical|https://docs.openssl.org/1.1.1/man3/X509_EXTENSION_get_object> functions given the pointer value of the instance, and returns its return value.
 
 =head2 DESTROY
 
